--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+/* @font-face {
+  font-family: 'iCielMedium';
+  src: local('iCielMedium', url('...'));
+} */
+
+
 * {
   margin: 0;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
